@startuml
package parking {
interface FindParkingLotService
interface ParkingLotFinderSpecification
interface ParkingLotFinderFactory
interface ParkingLotFinder
class ParkingLot
class Ticket
}

package finder{
class ParkingManagerSpecification
class ParkingBoySpecification
class ParkingManager
class ParkingBoy
class FindParkingLotStrategy
}

package policy{
class SortedFindParkingLot
class SpaceMaxFindParkingLot
}

interface ParkingBoyService{
 Ticket parkingCar(String parkingBoyId, Car car);
}

interface ParkingManagerService{
 + Ticket parkingCar(String managerId, Car car)
 + ParkingLot getAvailableParkingLot(String managerId);
}
class ParkingManagerServiceImpl <<Application>>{
 + Ticket parkingCar(String managerId, Car car)
 +  ParkingLot getAvailableParkingLot(String managerId);
}

class ParkingBoyServiceImpl <<Application>> {
 Ticket parkingCar(String parkingBoyId, Car car);
}

Class ParkingManager <<Entity>> <<Aggregate Root>>  {
  List<UUID> parkingBoys

+ ParkingBoy findParkingBoy(List<UUID> parkingBoys)
}

Class ParkingBoy <<Value Object>> {
  + void setParkingLots (ParkingLot[] parkingLots)
  + ParkingLot[] getParkingLots()
}

Class ParkingBoyConfig  << Entity >> <<Aggregate Root>>{
  List<UUID> parkingLots
  String findParkingLotStrategyName
}


class ParkingLot << Entity >> <<Aggregate Root>> {
  UUID id
  int capacity
  Map <Ticket, Car> parkedCars

  + Ticket park(Car car)
  + Car take(Ticket ticket)
}

Class Car << Value Object >> {
    PlateNumber plateNumber
}

Class Ticket << Value Object >> {
  + Boolean validate()
}

class FindParkingLotService <<Service>> {
ParkingLot findParkingLot(ParkingBoy parkingBoy)
}

abstract class FindParkingLotStrategy <<Strategy>> <<Value Object>>{
abstract ParkingLot find(ParkingLot[] parkingLots)
}

Class SortedFindParkingLot{
+ParkingLot find(ParkingLot[] parkingLots)
}

Class SpaceMaxFindParkingLot{
+ParkingLot find(ParkingLot[] parkingLots)
}

Class ParkingBoyFactory {
+static ParkingBoy(ParkingBoyConfig parkingBoyConfig)
}


FindParkingLotStrategy  <|.. SortedFindParkingLot
FindParkingLotStrategy  <|.. SpaceMaxFindParkingLot
ParkingManager "1" o--> "0..many" ParkingBoy
Ticket "1" *--> "1" Car
ParkingLot "1" o--> "0..many" Ticket
ParkingBoy "1" o--> "0..many" ParkingLot
ParkingBoy "1" o--> "1" FindParkingLotStrategy
FindParkingLotService ..> ParkingBoy
ParkingBoyConfig ..> ParkingBoy

ParkingBoyFactory ..>ParkingBoy
ParkingBoyFactory ..>ParkingBoyConfig

ParkingBoyServiceImpl ..> ParkingBoyConfigRepository
ParkingBoyServiceImpl ..> FindParkingLotService
ParkingBoyServiceImpl ..> ParkingBoyFactory

ParkingManagerServiceImpl ..> ParkingBoyConfigRepository
ParkingManagerServiceImpl ..> FindParkingLotService
ParkingManagerServiceImpl ..>  ParkingManagerRepository
ParkingManagerServiceImpl ..> ParkingBoyFactory

ParkingBoyConfigRepository ..>ParkingBoyConfig
ParkingManagerRepository ..>ParkingManager

ParkingManagerServiceImpl ..>ParkingManagerService
ParkingBoyServiceImpl ..>ParkingBoyService


@enduml